syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/merynayr/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
  string chatName = 1;
  repeated int64 users_id = 2;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message SendMessageRequest {
  google.protobuf.Int64Value chat_id = 1;
  google.protobuf.Int64Value user_id = 2;
  google.protobuf.StringValue text = 3;
  google.protobuf.Timestamp timestamp = 4;
}